# gnome-search-tool

./: ChangeLog  Makefile.am  autogen.sh  configure.ac  gnome-search-tool.doap  gsearchtool-callbacks.c  gsearchtool-support.c  gsearchtool-support.h  gsearchtool.c
data/: Makefile.am
help/: Makefile.am
help/cs/: cs.po
help/de/: de.po
help/es/: es.po
help/fr/: fr.po
help/ja/: ja.po
help/sl/: sl.po
help/zh_CN/: zh_CN.po
libeggsmclient/: Makefile.am
libgnomeui-deprecated/: Makefile.am  gsearchtool-entry.c  gsearchtool-entry.h
po/: POTFILES.in
src/: Makefile.am  gsearchtool-support.c
